# data-fabrication

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.sisyphus/: boulder.json
.sisyphus/notepads/data-fabrication-challenge/: learnings.md
.sisyphus/plans/: data-fabrication-challenge.md  documentation.md  llm-similarity-system.md
cli/: Cargo.toml
cli/src/: lib.rs  main.rs  status.rs  submit.rs  ui.rs
cli/tests/: integration_test.rs
core/: Cargo.toml
core/src/: agent_sandbox.rs  ast_similarity.rs  ast_validation.rs  cache.rs  config.rs  consensus.rs  error.rs  lib.rs  llm_client.rs  resource_limits.rs  sandbox.rs  schema.rs  scoring_types.rs
core/tests/: llm_test.rs  security_test.rs
docs/: architecture.md
docs/miner/: quickstart.md
executor/: Cargo.toml
executor/src/: agentic_investigator.rs  error.rs  executor.rs  lib.rs  llm_inference.rs  main.rs
executor/tests/: integration_test.rs
executor/tests/fixtures/: error.py  simple.py  timeout.py
server/: Cargo.toml
server/src/: lib.rs  main.rs  types.rs
src/: lib.rs
wasm/: Cargo.toml
wasm/src/: dataset.rs  evaluation.rs  lib.rs  routes.rs  scoring.rs  storage.rs  submission.rs  types.rs
wasm/src/api/: handlers.rs
wasm/src/core/: mod.rs  prelude.rs
wasm/tests/: integration_test.rs
