[workspace]
resolver = "2"
members = [".", "core", "wasm", "server", "cli", "executor"]
default-members = ["wasm"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Platform Network"]
license = "Apache-2.0"
repository = "https://github.com/PlatformNetwork/data-fabrication"

[workspace.dependencies]
platform-challenge-sdk = { git = "https://github.com/PlatformNetwork/platform", branch = "main", features = ["http-server"] }
platform-core = { git = "https://github.com/PlatformNetwork/platform", branch = "main" }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
sled = "0.34"

[package]
name = "data-fabrication"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Data Fabrication shared library — conversation dataset generator"

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
bincode.workspace = true
anyhow = "1.0"
