[package]
name = "data-fabrication-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core traits and types shared between WASM and server implementations"

[features]
default = ["alloc"]
std = ["thiserror", "serde/std", "serde_json/std", "rustpython-parser", "tempfile", "log"]
alloc = []
http-client = ["reqwest", "tokio"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
bincode = { version = "1.3", default-features = false }
thiserror = { version = "2.0", optional = true }
rustpython-parser = { version = "0.4", optional = true }
tempfile = { version = "3.15", optional = true }
log = { version = "0.4", optional = true }
sha2 = { version = "0.10", default-features = false }
# For HTTP client (optional, for server builds)
reqwest = { version = "0.12", features = ["rustls-tls", "json"], optional = true }
tokio = { version = "1.0", features = ["time"], optional = true }

[target.'cfg(unix)'.dependencies]
rlimit = "0.10"

[dev-dependencies]
proptest = "1.6"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
