[package]
name = "data-executor"
version.workspace = true
edition.workspace = true
description = "Remote evaluation executor for Data Fabrication challenge on Bittensor"
license.workspace = true

[features]
bittensor = []

[[bin]]
name = "data-executor"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
data-fabrication-core = { path = "../core", features = ["std"] }
plagiarism-sdk = { path = "../../plagiarism-sdk", features = ["std", "python-parser"] }
axum = { version = "0.7", features = ["multipart", "ws"] }
tokio = { version = "1", features = ["full", "process", "sync"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

schnorrkel = "0.11"
sha2 = "0.10"
hex = "0.4"
bs58 = "0.5"
base64 = "0.22"
blake2 = "0.10"

dashmap = "6"
parking_lot = "0.12"

zip = "2"
tar = "0.4"
flate2 = "1"

anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }

chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tempfile = "3.27.0"
serde_yaml = "0.9.34"

[dev-dependencies]
pretty_assertions = "1"
