[package]
name = "data-fabrication-wasm"
version.workspace = true
edition.workspace = true
description = "Data Fabrication Challenge – WASM evaluation module"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
platform-challenge-sdk-wasm = { git = "https://github.com/PlatformNetwork/platform.git", rev = "8b84dde8" }
data-fabrication-core = { path = "../core", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
bincode = { version = "1.3", default-features = false }
sha2 = { version = "0.10", default-features = false }
